governance-shared/baselines/1.16.2/references/03-task-board-rules.md
# 浠诲姟鐪嬫澘绾︽潫瑙勫垯

鏈鍒欓€傜敤浜庝换鍔＄湅鏉跨殑瀛楁瀹氫箟銆佺姸鎬佹祦杞€佽鍒掑彉鏇磋鏁般€佸欢鏈熺粺璁′笌瓒呮湡鍒ゅ畾銆?
---

## 1. 浠诲姟鐪嬫澘瀛楁

`tasks/board.md` 鏄换鍔＄鐞嗙殑鏍稿績浜嬪疄婧愶紝瀛楁瀹氫箟濡備笅锛?
| 瀛楁 | 璇存槑 | 蹇呭～ | 鍙栧€?|
|------|------|------|------|
| Task ID | 鍞竴鏍囪瘑 | 鏄?| T-YYYYMMDD-NNN |
| Title | 浠诲姟鏍囬 | 鏄?| 鑷敱鏂囨湰 |
| Owner | 璐熻矗浜?| 鏄?| 濮撳悕 |
| Status | 褰撳墠鐘舵€?| 鏄?| todo / in_progress / blocked / review / done / cancelled |
| Priority | 鎵ц浼樺厛绾?| 鏄?| P0 / P1 / P2 / P3 |
| Plan Ref | 鍏宠仈璁″垝椤?| 鍚?| P-NN |
| Milestone Ref | 鍏宠仈閲岀▼纰?| 鍚?| M-NN |
| Requirement Ref | 鍏宠仈闇€姹?| 鍚?| REQ-XXX-NNN |
| Risk Ref | 鍏宠仈椋庨櫓 | 鍚?| R-YYYYMMDD-NNN |
| Issue Ref | 鍏宠仈闂 | 鍚?| I-YYYYMMDD-NNN |
| Due Date | 棰勮瀹屾垚鏃ユ湡 | 鏄?| YYYY-MM-DD |
| Original Due Date | 鏈€鍒濊鍒掑畬鎴愭棩鏈?| 鍚?| YYYY-MM-DD锛堣瀹氬悗涓嶅彲鍙橈紝瑙?搂1a锛?|
| Actual Date | 瀹為檯瀹屾垚鏃ユ湡 | 鍚?| YYYY-MM-DD |
| Plan Change Count | 璁″垝鍙樻洿绱娆℃暟 | 鍚?| 鏁存暟锛岄粯璁?0锛堣 搂1a锛?|
| Delay Count | 寤舵湡绱娆℃暟 | 鍚?| 鏁存暟锛岄粯璁?0锛堣 搂1a锛?|
| Source | 鏉ユ簮 | 鏄?| meeting / daily / manual / requirement / import |
| Source Ref | 鏉ユ簮鏂囦欢 | 鏄?| 鏂囦欢璺緞鎴栦細璁?ID |
| Notes | 澶囨敞 | 鍚?| 鑷敱鏂囨湰 |

### 1a. 璁″垝鍙樻洿涓庡欢鏈熻鏁板瓧娈?
鏈粍瀛楁鐢ㄤ簬"鍘嗗彶璁″垝鍏ㄩ噺鍚屾涓庡彉鏇磋拷婧?锛圧2/R3锛夛細

1. **Original Due Date**锛氫换鍔＄殑**鏈€鍒濊鍒掑畬鎴愭棩鏈?*锛屽湪浠诲姟棣栨璁惧畾 Due Date 鏃惰褰曪紝**涓€鏃﹁瀹氬嵆涓嶅彲鍙?*锛堥櫎闈炰汉宸ョ籂姝ｅ綍鍏ラ敊璇紝涓斿繀椤诲湪 Change Log 涓褰曞苟淇濈暀鍘嗗彶锛夈€傚畠鏄拷婧?鏈€鍒濊鍒掍綍鏃跺畬鎴?鐨勫敮涓€鍙潬閿氱偣銆?2. **Plan Change Count**锛氫换鍔¤鍒掑彂鐢熷彉鏇寸殑绱娆℃暟锛堟暣鏁帮紝榛樿 0锛夈€傚洜 Owner 鏇存崲銆佽寖鍥磋皟鏁淬€丏ue Date 浠绘剰鏂瑰悜绉诲姩銆佽繘搴﹂噸鎺掔瓑璁″垝鍙樺寲鍧囪鍏ャ€?3. **Delay Count**锛氫换鍔?*寤舵湡**绱娆℃暟锛堟暣鏁帮紝榛樿 0锛夈€?*浠呭綋 Due Date 鍚戝悗绉诲姩锛堟瘮鍘熻鍒掓洿鏅氾級鏃舵墠 +1**銆傚欢鏈熸槸璁″垝鍙樻洿鐨勪竴涓瓙闆嗏€斺€斾笉鏄瘡娆¤鍒掑彉鏇撮兘璁″欢鏈熴€?
**鍒ゅ畾瑙勫垯**锛?- 姒傚康鍩?A锛堣褰曟搷浣滐級锛歜oard 搴曢儴 Change Log 浣跨敤 `add/update/remove/status/archive`锛?*涓嶆柊澧炶鍒掑彉鏇寸被鍨?*锛涜鍒掑彉鏇撮€氳繃 `update` 鎿嶄綔 + Description 娉ㄦ槑 `plan_change` 浣撶幇锛堣 搂7锛夈€?- 姒傚康鍩?B锛堝彉鏇村奖鍝嶅垎绫伙級锛氳鍒掑彉鏇寸殑鍒嗙被锛坄plan_change` 绛夛級鍦ㄩ渶姹傚彉鏇村鎵逛腑鐢?`references/08-change-control-rules.md` 绠＄悊锛屼笌 board 璁℃暟瀛楁瑙ｈ€︺€?- `Plan Change Count` / `Delay Count` 鐢?AI 鍦ㄧ‘璁ょ殑璁″垝鍙樻洿鍙戠敓鍚庢洿鏂帮紝鍏堣緭鍑?寤鸿鏇存柊娓呭崟"锛屼汉宸ョ‘璁ゅ悗钀藉簱銆?- 鏃у伐浣滃尯鍏煎锛氭柊瀛楁缂哄け鏃惰涓?0锛屽洖閫€鍒?Change Log 缁熻骞舵爣娉?鎺ㄦ柇锛屾湭纭"銆?- 寰呯‘璁わ紙`Confirmed By: 寰呯‘璁锛夌殑 Due Date **涓嶅弬涓?*"宸茬‘璁よ鍒掑欢鏈?瓒呮湡"璁℃暟锛屼粎鍦?寰呯‘璁ゅ彉鏇?鍖哄潡閫愭潯鎻愮ず鍘熷€?vs 鏂板€硷紱涓嶆柊澧炲瓧娈靛垪锛宲ending 鐘舵€佷互 `Confirmed By` 鍊?+ `pending-changes.md` 绱㈠紩鍒ゅ畾锛堣鏂规 3.5.3銆丅-03锛夈€?
## 5a. 瓒呮湡鍒ゅ畾涓庤拷璐ｅ綊灞炶鍒欙紙B 绫伙級

**瀹氫箟鍖哄垎**锛?- **A 绫伙紙璁℃暟鍣級**锛歚Delay Count` 浠呯粺璁?Due Date 鍚庣Щ娆℃暟锛岃 搂1a銆傚洖绛?寤舵湡浜嗗嚑娆?銆?- **B 绫伙紙鐘舵€佸垽瀹氾級**锛氱粰瀹氭煇鏃跺埢锛屽垽鏂换鍔?*褰撳墠鏄惁瓒呮湡**鍙婂綊灞烇紝瑙佹湰鑺傘€傚洖绛?鐜板湪鍝簺浠诲姟瓒呮湡浜?銆?*B 绫诲垽瀹氫笉鍐欏叆 Delay Count 璁℃暟鍣ㄣ€?*

### 5a.1 瑙﹀彂鏃舵満

B 绫昏秴鏈熷垽瀹氬湪**涓や釜鏃舵満**瑙﹀彂锛?1. **鏃ユ姤澶勭悊鏃?*锛氭眹鎬婚」鐩棩鎶ユ椂鍚屾璇勪及鍚勪换鍔¤秴鏈熺姸鎬併€?2. **PM 鏌ヨ杩涘害/鐘舵€佹椂**锛氱敤鎴烽棶"鐜板湪杩涘害鎬庝箞鏍?"鍝簺浠诲姟瓒呮湡浜?"XX 寤舵湡/瓒呮湡浜嗗悧"鏃讹紝**瀹炴椂璁＄畻**锛岀‘淇濇瘡娆℃煡璇㈤兘鏄渶鏂扮粨璁恒€?
### 5a.2 鏁版嵁婧愶紙绱㈠紩浼樺厛锛岀姝㈡壂鎻忔棩鎶ュ師鏂囷級

鍒ゅ畾鏁版嵁鏉ヨ嚜 **board.md + 棰勫缓绱㈠紩**锛屼笉寰楀湪鏌ヨ鏃朵复鏃舵壂鎻忔棩鎶ュ師鏂囨垨鍒涘缓鑴氭湰閬嶅巻鐩綍锛堝榻?`references/05-query-rules.md` 鏈€灏忚鍙栧師鍒欙級锛?- board.md锛氬綋鍓?Due Date / Owner / Original Due Date / Status / 璁″垝鍙樻洿纭鐘舵€併€?- 绱㈠紩锛氫换鍔℃渶杩戝畬鎴愮姸鎬侊紙璇?`todos/daily-todo-index.md` / `personal-todo-index.md` 绛夐寤虹储寮曪紝绱㈠紩鍦ㄦ棩鎶ュ鐞嗗悗鑷姩缁存姢锛夈€?- 鑻ョ储寮?>24h 鏈洿鏂帮紝AI 鍏堟彁绀?绱㈠紩杩囨湡锛屽缓璁噸寤?锛屼笉鎷胯繃鏈熸暟鎹綋缁撹锛堝榻?`references/14-self-check-rules.md`锛夈€?
### 5a.3 褰撳墠鏈夋晥 Due Date锛堢‘璁ょ獥鍙ｆ湡锛?
寤舵湡/瓒呮湡浠?*褰撳墠鏈夋晥 Due Date** 涓哄熀鍑嗭細
- 鏂拌鍒掑彉鏇?*宸茬‘璁?*锛坄Confirmed By: PM 濮撳悕`锛夛細浣跨敤鏂?Due Date銆?- 鏂拌鍒掑彉鏇?*寰呯‘璁?*锛坄Confirmed By: 寰呯‘璁锛岀┖绐楁湡锛夛細浠嶆寜鏃х増锛堟湭鍙樺墠鐨勶級Due Date 鍒ゅ畾锛涘緟纭鏂拌鍒?*涓嶅弬涓?*寤舵湡/瓒呮湡鍒ゅ畾锛屼竴杩囨棫鎴鏃ユ湭瀹屾垚鍗冲垽瓒呮湡锛堥璀︼級锛屼粎鍦?寰呯‘璁ゅ彉鏇?鍖哄潡鎻愮ず鍘熷€?vs 鏂板€笺€?
**鍦烘櫙鍒ゅ畾**锛?| 鍦烘櫙 | 鍒ゅ畾 |
|---|---|
| v1 8/10锛寁2 8/15 鏈‘璁わ紝8/11 鏈畬鎴?| 鎸?v1 鍒よ秴鏈燂紙棰勮锛夛紱涓?+Delay锛圖elay 浜?v2 纭鍚庢寜 v2 璁★級 |
| v1 8/10锛寁2 8/15 鏈‘璁わ紝8/11 宸插畬鎴?| 涓嶇畻寤舵湡锛涙彁閱掓牳鏌?鎴鏃ユ湡鍚庣Щ鏄惁涓鸿鎿嶄綔" |
| v1 8/10锛寁2 8/15 宸茬‘璁?| 鎸?8/15锛?/16 璧锋湭瀹屾垚鎵嶇畻瓒呮湡锛?/11-8/15 绌虹獥鏈畬鎴愪粎棰勮 |
| v1 8/10锛屾棤 v2锛?/11 鏈畬鎴?| 鐩存帴瓒呮湡锛圖ue Date 杩囨湭瀹屾垚锛?|
| v1 8/10锛寁2 8/5锛堟彁鍓嶏級 | 涓嶅垽寤舵湡锛涙寜鏈€缁堢‘璁ょ殑 8/5 鍒ゅ悗缁秴鏈燂紱鍙Е鍙?璁″垝鏀剁揣"鎻愰啋 |

### 5a.4 鎹汉褰掑睘

鍚屼竴浠诲姟鍦ㄤ袱鐗堣鍒掍箣闂村彂鐢?Owner 鍙樻洿鏃讹紝瓒呮湡褰掑睘鎸?*浜ゆ帴鏃堕棿鐐?*鍒囧垎锛?- 浜ゆ帴鍓嶏紙鍙樻洿鍙戠敓鏃朵换鍔＄姸鎬佷负"鏈畬鎴?锛夌殑寤舵湡/瓒呮湡锛屽綊灞?*鍘熻礋璐ｄ汉**銆?- 浜ゆ帴鍚庣殑寤舵湡/瓒呮湡锛屽綊灞?*鏂拌礋璐ｄ汉**銆?- 鍙樻洿鍙戠敓鏃朵换鍔″凡瀹屾垚锛屽垯涓嶄骇鐢熸崲浜哄欢鏈熷綊灞為棶棰樸€?
## 2. 浠诲姟鐘舵€佹祦杞?
```
todo 鈫?in_progress 鈫?review 鈫?done
                鈫?         鈫?             blocked 鈹€鈹€鈹€鈹€鈹€鈹€鈹€鈹?
浠讳綍鐘舵€?鈫?cancelled
```

### 2.1 鐘舵€佸畾涔?
| 鐘舵€?| 璇存槑 | 杩涘叆鏉′欢 |
|------|------|----------|
| todo | 宸插垎閰嶄絾鏈紑濮?| 浠诲姟宸插垱寤猴紝璐熻矗浜哄凡纭 |
| in_progress | 姝ｅ湪杩涜 | 璐熻矗浜哄凡寮€濮嬫墽琛?|
| blocked | 琚樆濉?| 瀛樺湪渚濊禆鏈弧瓒虫垨澶栭儴闂 |
| review | 寰呰瘎瀹?| 寮€鍙戝畬鎴愶紝绛夊緟浠ｇ爜瀹℃煡鎴栨祴璇?|
| done | 宸插畬鎴?| 璇勫閫氳繃锛屼氦浠樼墿宸叉彁浜?|
| cancelled | 宸插彇娑?| 浠诲姟涓嶅啀闇€瑕?|

### 2.2 娴佽浆瑙勫垯

1. `todo 鈫?in_progress`锛氬繀椤绘湁璐熻矗浜虹‘璁ゃ€?2. `in_progress 鈫?blocked`锛氬繀椤昏褰曢樆濉炲師鍥犲拰鍏宠仈鐨?Issue ID銆?3. `blocked 鈫?in_progress`锛氬繀椤昏褰曡В闄ら樆濉炵殑鏉′欢鍜屾椂闂淬€?4. `in_progress 鈫?review`锛氬繀椤绘湁浜や粯鐗╂垨瀹屾垚鏍囧噯鍙獙璇併€?5. `review 鈫?done`锛氬繀椤婚€氳繃璇勫锛岃瘎瀹′汉闇€璁板綍銆?6. 浠讳綍鐘舵€?鈫?`cancelled`锛氬繀椤昏褰曞彇娑堝師鍥犲拰鍐崇瓥浜恒€?
## 3. 浠诲姟涓庨渶姹傜殑鍏宠仈

1. 闇€姹傛弿杩?瑕佸疄鐜颁粈涔?锛屼换鍔℃弿杩?濡備綍瀹炵幇鎴栦氦浠?銆?2. AI 涓嶅緱灏嗛渶姹傜洿鎺ョ櫥璁颁负浠诲姟锛岄櫎闈炲凡鏄庣‘鎷嗚В涓哄彲鎵ц浜嬮」銆?3. 姣忎釜浠诲姟蹇呴』鑳借拷婧埌鏉ユ簮闇€姹傛垨鏉ユ簮浼氳/鏃ユ姤銆?4. 涓€涓渶姹傚彲鎷嗚В涓哄涓换鍔★紝浣嗕竴涓换鍔″師鍒欎笂鍙叧鑱斾竴涓富闇€姹傘€?
## 4. 浠诲姟浼樺厛绾?
| 浼樺厛绾?| 鍚箟 | 鍒ゅ畾鏍囧噯 |
|--------|------|----------|
| P0 | 绱ф€ヤ笖閲嶈 | 闃绘柇閲岀▼纰戙€佸奖鍝嶉獙鏀躲€佺敓浜т簨鏁?|
| P1 | 閲嶈涓嶇揣鎬?| 鏍稿績鍔熻兘銆佸叧閿矾寰勪换鍔?|
| P2 | 涓€鑸?| 杈呭姪鍔熻兘銆佷紭鍖栫被浠诲姟 |
| P3 | 浣?| 闈炵揣鎬ャ€佸彲寤跺悗 |

浼樺厛绾т笉浠ｈ〃鎵ц椤哄簭锛屾墽琛岄『搴忕敱渚濊禆鍏崇郴鍜岃礋璐ｄ汉瀹夋帓鍐冲畾銆?
## 5. 浠诲姟渚濊禆

鍦?Notes 瀛楁涓褰曚緷璧栧叧绯伙細

```markdown
depends_on: T-20260809-001
blocks: T-20260809-003, T-20260809-005
```

- `depends_on`锛氭湰浠诲姟渚濊禆鐨勫墠缃换鍔°€?- `blocks`锛氭湰浠诲姟闃诲鐨勫悗缁换鍔°€?
渚濊禆鍏崇郴鍙樻洿鏃讹紝蹇呴』鍦?Change Log 涓褰曘€?
## 6. Backlog 绠＄悊

`tasks/backlog.md` 鐢ㄤ簬瀛樻斁锛?- 灏氭湭鎺掓湡鐨勪换鍔°€?- 闇€姹傛媶瑙ｅ悗灏氭湭鍒嗛厤鍒拌凯浠ｇ殑浠诲姟銆?- 浼氳涓彁鍑虹殑寰呯‘璁や簨椤广€?
Backlog 涓殑浠诲姟瀛楁绠€鍖栵細

| 瀛楁 | 璇存槑 |
|------|------|
| Task ID | T-YYYYMMDD-NNN |
| Title | 浠诲姟鏍囬 |
| Source | 鏉ユ簮 |
| Priority | P0-P3 |
| Status | backlog |
| Notes | 澶囨敞 |

浠?backlog 绉诲叆 board 鏃讹紝鐘舵€佹敼涓?`todo`锛屽苟琛ュ叏瀹屾暣瀛楁銆?
## 7. Change Log

`tasks/board.md` 搴曢儴蹇呴』缁存姢 Change Log锛?
```markdown
## Change Log

| Date | Change Type | Description | Source | Confirmed By |
|---|---|---|---|---|
| 2026-08-09 | add | 鏂板 T-20260809-001 | MTG-20260809-001 | 寮犱笁 |
| 2026-08-09 | status | T-20260808-005: review 鈫?done | 鏃ユ姤 2026-08-09 | 鏉庡洓 |
| 2026-08-10 | update | T-20260809-001: plan_change锛孌ue Date 8/10鈫?/15锛圖elay +1锛孫riginal 8/10 涓嶅彲鍙橈級 | PM 纭 | 寮犱笁 |
```

**姒傚康鍩熻鏄?*锛歜oard 搴曢儴 Change Log 鐨?Change Type 灞?*璁板綍鎿嶄綔绫诲瀷**锛坄add/update/remove/status/archive`锛夛紝**涓嶆柊澧?`plan_change` 绫诲瀷**銆傝鍒掑彉鏇撮€氳繃 `update` 鎿嶄綔 + Description 鏍囨敞 `plan_change` 浣撶幇锛涘叾褰卞搷鍒嗙被锛坮equirement/scope/schedule/cost/resource/plan_change锛夌敱 `references/08-change-control-rules.md`锛堟蹇靛煙 B锛夌鐞嗭紝涓よ€呰В鑰︺€?
Change Log 娲昏穬鍖轰笂闄?50 琛屾垨瓒呰繃 30 澶╂椂锛岃Е鍙戞寜鏈堝綊妗ｅ埌 `change-log/archive/YYYYMM-change-log.md`锛屽苟缁存姢 `change-log/index.md` 鏈堜唤瀵艰埅銆備富鍔ㄥ彉鏇达紙pending锛夎褰曞湪鍐欏叆鏃跺悎骞跺啓鍏ワ紝鍚屼細璇濈‘璁ゅ彧璁?1 鏉°€?
## 8. 绾ц仈浼犳挱瑙勫垯

鏈疄浣擄紙Task锛夌姸鎬佸彉鏇存椂锛屾寜浠ヤ笅瑙勫垯瑙﹀彂涓嬫父鍔ㄤ綔銆傚姩浣滃垎涓夌被锛?- [AUTO] 鍐欐淳鐢熻鍥撅紙绱㈠紩/寰呭姙锛夛紝浣庨闄╋紝鐩存帴鎵ц
- [CHECK] 鍙鏍￠獙锛屾鏌ュ叧鑱旀槸鍚﹀瓨鍦?涓€鑷?- [SUGGEST] 鍐欎簨瀹炴簮鎴栧奖鍝嶅叾浠栧疄浣擄紝鍔犲叆寤鸿鏇存柊娓呭崟寰?PM 纭

> **AUTO 浣滅敤鍩熷０鏄?*锛欰UTO 浠呬綔鐢ㄤ簬闈炰簨瀹炴簮鐨勬淳鐢熻鍥撅紙todo 绱㈠紩/鍚勭被娲剧敓 index锛夛紝涓嶈Е纰颁换浣曚簨瀹炴簮鏂囦欢銆備簨瀹炴簮鍐欏叆锛堝惈 pending 鐧昏锛変竴寰嬪彈 `skill-contract.md` 绗?5 鏉＄害鏉熴€?
鎵ц椤哄簭锛氬厛 AUTO 鈫?鍐?CHECK 鈫?鏈€鍚?SUGGEST銆?鍚屼竴澶勭悊娴佺▼鍐咃紝绾ц仈鍔ㄤ綔鍙墽琛屼竴娆★紱澶氫釜 SUGGEST 姹囨€讳负鍚屼竴鎵瑰缓璁竻鍗曪紝娴佺▼鏈熬缁熶竴杈撳嚭銆?鎵ц瀹屾瘯鍚庯紝14 鍙疯嚜鏌ユ竻鍗曢獙璇佸畬鏁存€с€?
Task 鍒涘缓 鈫?  [CHECK] 鑻ュ惈 Risk Ref 鈫?楠岃瘉鍏宠仈椋庨櫓瀛樺湪涓旂姸鎬佸悎鐞嗭紙搂1 Ref 瀛楁锛?  [CHECK] 鑻ュ惈 Issue Ref 鈫?楠岃瘉鍏宠仈闂瀛樺湪涓旂姸鎬佸悎鐞嗭紙搂1 Ref 瀛楁锛?  [CHECK] 鑻ュ惈 Requirement Ref 鈫?楠岃瘉鍏宠仈闇€姹傚瓨鍦紙搂1 Ref 瀛楁锛?
Task 鐘舵€?鈫?done 鈫?  [AUTO] 鏇存柊 personal-todo-index 涓搴旀潯鐩姸鎬佷负 done锛?4 搂2.2锛?  [AUTO] 鏇存柊 daily-todo-index 瀵瑰簲鏉＄洰锛?4 搂2.2锛?  [CHECK] 鑻ュ惈 Issue Ref 鈫?妫€鏌ュ叧鑱?issue 鏄惁鍙叧闂?
Task 鐘舵€?鈫?blocked 鈫?  [SUGGEST] 鑻ュ洜 Issue 闃诲 鈫?寤鸿纭 issue-register 涓搴?issue 鐘舵€佷负 open

Task Owner 鍙樻洿 鈫?  [AUTO] 鏇存柊 personal-todo-index 涓浠诲姟鐨?Owner 瀛楁

> 绔埌绔伐浣滄祦鏁版嵁璺緞瑙?`00-pm-main-rules.md` 搂9锛圵F-1~WF-6锛夈€傛湰鏂囦欢 搂8 瀹氫箟 Task 瀹炰綋鐨勭骇鑱旇鍒欙紝00鍙?搂9 瀹氫箟璺ㄥ疄浣撶殑瀹屾暣宸ヤ綔娴佽矾寰勶紝涓よ€呬簰琛ヤ笉鏇夸唬銆?
